<resources>
    <string name="app_name">Tv Show Time</string>
    <string name="my_shows_title">My Shows</string>
    <string name="discover_title">Discover</string>
    <string name="stats_title">Stats</string>
    <string name="button">Button</string>
    <string name="discover_tab_text">Discover Tab</string>
    <string name="myshows_text">MyShows</string>
    <string name="stats_text">Stats</string>
    <string name="shows_image_description">Shows Image</string>
    <string name="show_name_textview">Show Name</string>
    <string name="seasons_number_textView">Seasons 0</string>
    <string name="status_textView">status</string>
    <string name="runtime_textView">00</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="todo">TODO</string>
    <string name="name_of_the_show">Name Of The Show</string>
    <string name="cast_show_tab">Cast</string>
    <string name="episodes_show_tab">Episodes</string>
    <string name="info_show_tab">Info</string>
    <string name="rating_description">Rating</string>
    <string name="genre_text_view">Genre</string>
    <string name="status_desc">Status</string>
    <string name="runtime_desc">Runtime</string>
    <string name="network_description">Network</string>
    <string name="premiered_text">Premiered:</string>
    <string name="genresTitle">Genres:</string>
    <string name="loading">Loading..</string>
    <string name="_0_0">0.0</string>
    <string name="season_0">Season ND</string>
    <string name="episode_0">Episode ND</string>
    <string name="details_episode_description">Episode Name Not Found :/</string>
    <string name="real_name">Real Name</string>
    <string name="role_name">Role Name</string>
    <string name="as">as</string>
    <string name="search_shows">Search Shows</string>
    <string name="search">Search</string>
    <string name="myshowname">MyShowName</string>
    <string name="allshows">All Shows</string>
    <string name="watch_list">Watch List</string>
    <string name="upcoming">Upcoming</string>
    <string name="watch_next">Watch Next</string>
    <string name="s00">S00</string>
    <string name="divider"> | </string>
    <string name="e00">E00</string>
    <string name="nameofepisode">NameOfEpisode</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="show_name">Show Name</string>
    <string name="episode_name">Episode Name</string>
    <string name="_0_0_10">0.0/10</string>
    <string name="search_your_watch_list">Search Your Watch List</string>
    <string name="search_your_upcoming_shows">Search Your Upcoming Shows</string>
    <string name="total_time_spent_watching_tv_shows">Total time spent watching TV shows</string>
    <string name="you_ve_seen_a_total_of">You\'ve seen a total of</string>
    <string name="sync_shows">Sync Shows</string>
    <string name="search_your_watchlist">Search Your WatchList</string>
</resources>
