<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCast"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/detailsCastRealName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/real_name"
            android:textColor="@color/colorMyPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageCast"
            app:layout_constraintTop_toTopOf="@+id/imageCast" />

        <TextView
            android:id="@+id/detailsCastRoleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/role_name"
            android:textColor="@color/colorMyPrimary"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageCast"
            app:layout_constraintStart_toEndOf="@+id/imageCast" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/as"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/detailsCastRoleName"
            app:layout_constraintStart_toStartOf="@+id/detailsCastRealName"
            app:layout_constraintTop_toBottomOf="@+id/detailsCastRealName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>