<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/myShowsTabLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:theme="@style/MyAppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/colorMyPrimary">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myShowsAllShowsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allshows" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myShowsWatchListTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_list" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myShowsUpcomingTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/myShowsFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myShowsTabLayout">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>